clusters/titania/apps/torrents/whisparr/whisparr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr
spec:
  selector: 
    app: whisparr
  type: ClusterIP
  ports:
  - port: 6969
    targetPort: 6969
