clusters/titania/apps/torrents/whisparr/whisparr-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisparr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - whisparr.cosmos.cboxlab.com
    secretName: whisparr-cert
  rules:
  - host: whisparr.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisparr
            port:
              number: 6969
